--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,37 +1,24 @@
-<div id="container-login">
-    <div id="title">
-        <i class="material-icons lock">lock</i> Login
+<section class="login-page">
+    <div class="form-heading">
+        <h1>Log In</h1>
+    </div>
+    <div class="form-section">
+        <form class="login-form">
+            <div>
+                <label for="username-login">Username</label>
+                <input type="text" class="entry-field" id="username-login" />
+            </div>
+            <div>
+                <label for="password-login">Password</label>
+                <input type="password" class="entry-field" id="password-login" />
+            </div>
+            <div>
+                <button type="submit" class="login-signup-btn">Log In!</button>
+            </div>
+        </form>
     </div>
 
-    <form>
-        <div class="input">
-            <div class="input-addon">
-                <i class="material-icons">face</i>
-            </div>
-            <input id="username" placeholder="Username" type="text" required class="validate" autocomplete="off">
-        </div>
-
-        <div class="clearfix"></div>
-
-        <div class="input">
-            <div class="input-addon">
-                <i class="material-icons">vpn_key</i>
-            </div>
-            <input id="password" placeholder="Password" type="password" required class="validate" autocomplete="off">
-        </div>
-
-        <div class="remember-me">
-            <input type="checkbox">
-            <span style="color: #DDD">Remember Me</span>
-        </div>
-
-        <input type="submit" value="Log In" />
-    </form>
-
-    <div class="register">
-        Don't have an account yet?
-        <a href="/signup"><button id="register-link">Register here</button></a>
-    </div>
-</div>
+    <a href="/signup" class="sign-in-link">sign up instead</a>
+</section>
 
 <script src="/javascript/login.js"></script>
